--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
   </header>
   <section id="home">
-  <img src="profile.jpg" alt="Evans Muoki" class="profile-pic">
+  <img src="Profile.jpg" alt="Evans Muoki" class="Profile-pic">
   <h1>Welcome to My Portfolio</h1>
   <p>Hello, I am Evans Muoki. This is my personal portfolio website.</p>
   
@@ -76,3 +76,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
